# CodePipeline-FastMCP

./: .coverage.AM-MSIGLER-M1.83736.XtbhVDEx  .coverage.AM-MSIGLER-M1.83736.XywVVnsx  .coverage.AM-MSIGLER-M1.83743.XXWLXYox  .coverage.AM-MSIGLER-M1.83743.XYMWfYPx  .coverage.AM-MSIGLER-M1.83748.XQwKXaLx  .coverage.AM-MSIGLER-M1.83748.XaUNmuwx  .coverage.AM-MSIGLER-M1.83752.XTWJEkzx  .coverage.AM-MSIGLER-M1.83756.XeJBsQIx  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CLEANUP_SUMMARY.md  CHANGELOG.md  Dockerfile  ELICITATION_IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  OPENAPI_INTEGRATION_SUMMARY.md  OTEL_IMPLEMENTATION_SUMMARY.md  README.md  UPDATE_SUMMARY.md  commits.txt  compare_implementations.py  config.env.example  coverage.xml  debug.py  docker-compose.yml  entrypoint.py  fastmcp_config.py  main.py  migration_plan.md  mock_fastmcp.py  openapi_server.py  openapi_server_simplified.py  otel_config.py  otel_metrics.py  otel_tracing.py  package-lock.json  package.json  prometheus_config.py  (+11 more)
config/: .env.example  .env.example.new.backup  oauth.json  openapi.example.json  otel.env.example  websocket.json
deprecated/: openapi_server_complex.py  test_openapi_integration.py
docs/: README.md  api-documentation.md  api-reference.md  api-reference.md.new  architecture-diagrams.md  architecture.md  changelog.md  deployment.md  deployment.md.new  elicitation-implementation-summary.md  main-py-migration-guide.md  mcp_server-requirements-backup.md  mcp_server-requirements.md  openapi-integration-summary.md  otel-implementation-summary.md  otel-observability-setup.md  prompt.md
grafana/alerting/: fastmcp-alerts.yml
grafana/dashboards/: fastmcp-overview.json
lib/: __init__.py  auth.py  cache.py  cache_backends.py  clients.py  errors.py  health.py  security.py  security_middleware.py  settings.py
observability/: README.md  __init__.py
observability/config/: __init__.py  otel_config.py
observability/exporters/: __init__.py  prometheus_exporter.py
observability/metrics/: __init__.py  hybrid_metrics.py
observability/tests/: __init__.py  test_integration.py
observability/tracing/: __init__.py  fastmcp_tracer.py
scripts/: coverage.sh  deploy.sh  dev.sh  health.sh  setup.sh  test.sh
src/: server.js
tests/: __init__.py  conftest.py  test_100_percent_coverage.py  test_100_percent_coverage_fixed.py  test_cache_backends.py  test_circuit_breaker.py  test_current_server.py  test_debug.py  test_entrypoint.py  test_entrypoint_fixed.py  test_fallback_mechanisms.py  test_fastmcp_config.py  test_fastmcp_config_basic.py  test_fastmcp_server.py  test_final_coverage.py  test_integration_e2e.py  test_lib_auth.py  test_lib_cache.py  test_lib_clients.py  test_lib_errors.py  test_lib_health.py  test_lib_integration.py  test_lib_integration_simple.py  test_lib_settings.py  test_main.py  test_main_py_coverage.py  test_mcp_server.py  test_observability_exporters.py  test_observability_integration.py  test_observability_tracing.py  test_openapi_integration.py  test_openapi_server.py  test_openapi_server_coverage.py  test_openapi_server_simplified.py  test_security.py  test_security_middleware.py
(+7 files in other folders)
